--- a/myWebPage.html
+++ b/myWebPage.html
@@ -22,7 +22,7 @@
         <button id="search-button">Search</button>
     </div>
         <ul id="menuBox">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="myWebPage.html">Home</a></li>
             <li><a href="products.html">Products</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="about.html">About Us</a></li>
@@ -56,7 +56,8 @@
                 <P class="text-content">REVUELTO STARS IN THE 20TH AUTOSTYLE DESIGN COMPETITION</P>
                 <button id="content-button">READ MORE</button>
             </div>
-        </div><div class="content-main2">
+        </div>
+        <div class="content-main2">
             <div>
                 <img class="img-content1" src="img/lamborContent2.png">
             </div>   
